# OpenSuperWhisper

./: .aiderignore  .gitignore  Readme.md  make_release.sh  notarize_app.sh  run.sh
.github/: dependabot.yml
.github/workflows/: build.yml  tauri.yml
OpenSuperWhisper/: AudioRecorder.swift  ModifierKeyMonitor.swift  MouseButtonMonitor.swift  OpenSuperWhisper-Info.plist  OpenSuperWhisperApp.swift  PermissionsManager.swift  Settings.swift  TranscriptionQueue.swift  TranscriptionService.swift  WhisperModelManager.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
OpenSuperWhisper.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
OpenSuperWhisper/Engines/: AtomicFlag.swift  FluidAudioEngine.swift  ReformulationService.swift  WhisperEngine.swift
OpenSuperWhisper/Indicator/: IndicatorWindow.swift
OpenSuperWhisper/Models/: Recording.swift
OpenSuperWhisper/Onboarding/: OnboardingView.swift
OpenSuperWhisper/Utils/: AppPreferences.swift  ClipboardUtil.swift  ItalianTextCorrector.swift
OpenSuperWhisperTests/: ItalianTextCorrectorTests.swift  OpenSuperWhisperTests.swift  ReformulationServiceTests.swift
agent/: config.py
docs/: HANDOFF.md  TAURI_REWRITE.md  build_whisper.md  release_build.md
tauri-app/: .gitignore  Cargo.toml
tauri-app/crates/audio-capture/: Cargo.toml
tauri-app/crates/audio-capture/src/: capture.rs  lib.rs  resample.rs
tauri-app/crates/italian-corrector/: Cargo.toml
tauri-app/crates/italian-corrector/src/: lib.rs
tauri-app/crates/model-manager/: Cargo.toml
tauri-app/crates/model-manager/src/: lib.rs
tauri-app/crates/paste-sim/: Cargo.toml
tauri-app/crates/paste-sim/src/: lib.rs
tauri-app/crates/recordings-store/: Cargo.toml
tauri-app/crates/recordings-store/src/: lib.rs
tauri-app/crates/reformulation/: Cargo.toml
tauri-app/crates/reformulation/src/: engine.rs  lib.rs
tauri-app/crates/reformulation/tests/: real_model.rs
tauri-app/crates/whisper-engine/: Cargo.toml
tauri-app/crates/whisper-engine/examples/: transcribe.rs
tauri-app/crates/whisper-engine/src/: lib.rs  model_validation.rs  transcribe.rs
tauri-app/public/: indicator.html
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: dictation.rs  lib.rs  permissions.rs  storage.rs
