[package]
name = "paste-sim"
version = "0.1.0"
edition.workspace = true

[dependencies]
arboard = "3"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse"] }
