[package]
name = "recordings-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
